--- a/Login.html
+++ b/Login.html
@@ -1,48 +1,23 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تسجيل الدخول</title>
-  <script type="module">
-    import { supabase } from "./supabaseClient.js"
-
-    // التحقق لو المستخدم مسجل دخول مسبقًا
-    async function checkUser() {
-      const { data, error } = await supabase.auth.getUser()
-      if (data.user) {
-        // لو فيه مستخدم بالفعل → توجه للداشبورد
-        window.location.href = "nqp.html"
-      }
-    }
-    checkUser()
-
-    // عند الضغط على زر تسجيل الدخول
-    document.addEventListener("DOMContentLoaded", () => {
-      const loginBtn = document.getElementById("login-google")
-
-      loginBtn.addEventListener("click", async () => {
-        const { data, error } = await supabase.auth.signInWithOAuth({
-          provider: "google",
-        })
-        if (error) {
-          console.error("خطأ:", error.message)
-        } else {
-          console.log("جاري تسجيل الدخول...", data)
-        }
-      })
-    })
-  </script>
-  <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin-top: 100px; background: #f5f5f5; }
-    button {
-      background: #4285F4; color: white; border: none; padding: 12px 20px;
-      border-radius: 8px; cursor: pointer; font-size: 16px;
-    }
-    button:hover { background: #3367D6; }
-  </style>
+  <script type="module" src="./login.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>تسجيل الدخول</h1>
-  <button id="login-google">تسجيل الدخول بـ Google</button>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+
+  <div class="bg-white shadow-lg rounded-2xl p-8 w-96 text-center">
+    <h1 class="text-2xl font-bold mb-4 text-gray-700">مرحباً بك 👋</h1>
+    <p class="text-gray-500 mb-6">سجل الدخول للمتابعة</p>
+
+    <button id="loginBtn" class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">
+      تسجيل الدخول باستخدام Google
+    </button>
+  </div>
+
 </body>
 </html>
+
